--- a/index.html
+++ b/index.html
@@ -10,25 +10,12 @@
 </head>
 
 <body>
+<div id="wrapper">
+    <input type="text" value="OFF" readonly />
+    <button type="button">Click Me</button>
+</div>
     <!-- <script src="app.js"></script> -->
-    <script src="server5.js"></script>
+    <script src="Arrays.js"></script>
 </body>
 
 </html>
-
-
-<!-- <html>
-
-<body>
-    <div id="app"></div>
-    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/jsx">
-      const app = document.getElementById('app');
-      ReactDOM.render(<h1>Develop. Preview. Ship. 🚀</h1>, app);
-    </script>
-</body>
-
-</html> -->
