--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button type="button">Click Me</button>
 </div>
     <!-- <script src="app.js"></script> -->
-    <script src="Arrays.js"></script>
+    <script src="index2.js"></script>
 </body>
 
 </html>
